# crypto_tools

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/crypto_tools/: big_int.hpp  crypto_tools.hpp  prime.hpp  shamir.hpp
source/: crypto_tools.cpp  prime.cpp  shamir.cpp
test/: CMakeLists.txt  Untitled.ipynb  shamir.py  test.py
test/source/: crypto_tools_test.cpp  prime.cpp  shamir.cpp
